# xiaozhi_linux_rs

./: .gitignore  Cargo.toml  README.md  README_en.md  RELEASE_NOTES.md  build.rs  config.toml  mcp接口设计.md  xiaozhi_config.json  xiaozhi_uuid.txt
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  custom.yml  feature-request.yml
.github/workflows/: cross-compile.yml  release-build.yml
audio/: build.rs
audio/src/: audio_system.rs  opus_codec.rs
docs/: MCP功能说明.md
scripts/: build_alsa.sh  clean.sh  download_helper.sh  incremental_writer.py  mcp_iot_fallback.sh  test_tool.sh
scripts/aarch64-unknown-linux-gnu/: build.sh
scripts/aarch64-unknown-linux-musl/: README.md  build.sh
scripts/armv7-unknown-linux-gnueabihf/: README.md  build.sh
scripts/armv7-unknown-linux-musleabihf/: README.md  build.sh
scripts/armv7-unknown-linux-uclibceabihf/: build.sh
scripts/x86_64-unknown-linux-gnu/: build.sh
src/: activation.rs  audio_bridge.rs  config.rs  controller.rs  gui_bridge.rs  iot_bridge.rs  main.rs  mcp_gateway.rs  net_link.rs  protocol.rs
src/audio/: alsa_device.rs  audio_system.rs  mod.rs  opus_codec.rs  play.rs  record.rs  speex.rs  stream_decoder.rs
src/mcp_gateway/: config.rs  mod.rs  protocol.rs  server.rs  tool.rs
tui/src/: face.rs
