[package]
name = "xiaozhi_linux_core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
bytes = "1.0"
futures-util = "0.3"
url = "2.5"
config = "0.15.19"
log = "0.4"
env_logger = "0.11.8"
mac_address = "1.1.8"
uuid = { version = "1.18.1", features = ["v4"] }

